cabal-version: >= 1.10

name:           my
version:        0.0.0.9
category:       Misc
synopsis:       Collection of generally useful functions
author:         Jascha Bakarinow
maintainer:     jascha-bakarinow@web.de
copyright:      Copyright (c) 2022 - 2023 Jascha Bakarinow
license:        GPL-3.0-or-later
license-file:   LICENSE.md
description:
  This package contains a collection of generally useful functions, so that they can easily be reused in different projects.

build-type: Simple

flag pcre-builtin
  default: True
  manual: True
  description:
    Wether to use regex-pcre or regex-pcre-builtin

library
  exposed-modules:
    My.Util,
    My.Parser,
    My.Numbertheory
	
  build-depends:
    base >= 4.14 && < 4.15

  if flag(pcre-builtin)
    build-depends: regex-pcre-builtin
  else
    build-depends: regex-pcre

  default-language: Haskell2010